--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -3,12 +3,12 @@
         <div class="col-md-2">
         </div>
         <div class="col-md-8">
-            <img data-toggle="modal" data-target="#FurmataPopup" class="thumbnail" src="/img/logo.png" />
-            <img data-toggle="modal" data-target="#DawgCoffeePopup" class="thumbnail" src="/img/dawgcoffeesquare.jpg" />
-            <img data-toggle="modal" data-target="#PostersPopup" class="thumbnail" src="/img/ANWACsquare.jpg" />
-            <img data-toggle="modal" data-target="#InfographicPopup" class="thumbnail" src="/img/finalsquare.png" />
-            <img data-toggle="modal" data-target="#ShootingsPopup" class="thumbnail" src="/img/shootingssquare.jpg" />
-            <img data-toggle="modal" data-target="#SpotifyPopup" class="thumbnail" src="/img/spotifysquare.jpg" />
+            <img data-toggle="modal" data-target="#FurmataPopup" class="thumbnail" src="img/logo.png" />
+            <img data-toggle="modal" data-target="#DawgCoffeePopup" class="thumbnail" src="img/dawgcoffeesquare.jpg" />
+            <img data-toggle="modal" data-target="#PostersPopup" class="thumbnail" src="img/ANWACsquare.jpg" />
+            <img data-toggle="modal" data-target="#InfographicPopup" class="thumbnail" src="img/finalsquare.png" />
+            <img data-toggle="modal" data-target="#ShootingsPopup" class="thumbnail" src="img/shootingssquare.jpg" />
+            <img data-toggle="modal" data-target="#SpotifyPopup" class="thumbnail" src="img/spotifysquare.jpg" />
 
             <div id="FurmataPopup" class="modal fade" role="dialog">
                 <div class="modal-dialog">
@@ -19,7 +19,7 @@
                         <div class="modal-body">
                             <p>As Communication's Director of my a cappella group, Furmata A Cappella, I was also
                         put to the task of rebranding. I resigned the Furmata logo this summer (2015).</p>
-                            <img height="250px" src="/img/logo.png"/>
+                            <img height="250px" src="img/logo.png"/>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -37,7 +37,7 @@
                         <div class="modal-body">
                             <p>This was one of my first assignments in INFO 343: it was an exercise that was mostly
                             for CSS practice.</p>
-                            <a href="http://students.washington.edu/kailock/info343/dawg-coffee/"><img height="250px" src="/img/dawgcoffee.jpg"/></a>
+                            <a href="http://students.washington.edu/kailock/info343/dawg-coffee/"><img height="250px" src="img/dawgcoffee.jpg"/></a>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -54,9 +54,9 @@
                         </div>
                         <div class="modal-body">
                             <p>Lookit all deeze posters (maybe include the instagram stuff?)</p>
-                            <img height="70%" src="/img/ANWAC.jpg"/>
-                            <img height="70%" src="/img/auditions.jpg"/>
-                            <img height="70%" src="/img/doremefallshow-01.jpg"/>
+                            <img height="70%" src="img/ANWAC.jpg"/>
+                            <img height="70%" src="img/auditions.jpg"/>
+                            <img height="70%" src="img/doremefallshow-01.jpg"/>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -74,7 +74,7 @@
                         <div class="modal-body">
                             <p><a href="http://kailock.wix.com/infovis-2015">Click here</a> to see the
                             website for my infographic.</p>
-                            <img height="70%" src="/img/number.png" />
+                            <img height="70%" src="img/number.png" />
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -92,7 +92,7 @@
                         <div class="modal-body">
                             <p>This INFO 343 assignment was the first time I used a JavaScript library: for this
                             site, I used Leaflet.js.</p>
-                            <a href="http://students.washington.edu/kailock/info343/police-shooting/"><img height="250px" src="/img/shootings.jpg"/></a>
+                            <a href="http://students.washington.edu/kailock/info343/police-shooting/"><img height="250px" src="img/shootings.jpg"/></a>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -109,7 +109,7 @@
                         </div>
                         <div class="modal-body">
                             <p>An assignment from INFO 343, using Spotify's API</p>
-                            <a href="http://students.washington.edu/kailock/info343/spotify-template/"><img height="250px" src="/img/spotify.jpg"/></a>
+                            <a href="http://students.washington.edu/kailock/info343/spotify-template/"><img height="250px" src="img/spotify.jpg"/></a>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
