--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -1,14 +1,54 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-2">
-        </div>
-        <div class="col-md-8">
-            <img data-toggle="modal" data-target="#FurmataPopup" class="thumbnail" src="img/logo.png" />
-            <img data-toggle="modal" data-target="#DawgCoffeePopup" class="thumbnail" src="img/dawgcoffeesquare.jpg" />
-            <img data-toggle="modal" data-target="#PostersPopup" class="thumbnail" src="img/ANWACsquare.jpg" />
-            <img data-toggle="modal" data-target="#InfographicPopup" class="thumbnail" src="img/finalsquare.png" />
-            <img data-toggle="modal" data-target="#ShootingsPopup" class="thumbnail" src="img/shootingssquare.jpg" />
-            <img data-toggle="modal" data-target="#SpotifyPopup" class="thumbnail" src="img/spotifysquare.jpg" />
+<!--<div class="container-fluid">-->
+    <!--<div class="row">-->
+        <!--<div class="col-md-2">-->
+        <!--</div>-->
+        <!--<div class="col-md-8">-->
+
+        <h3>Click a thumbnail to view project details.</h3>
+            <ul class="img-list">
+                <li>
+                    <a>
+                        <img data-toggle="modal" data-target="#FurmataPopup" class="thumbnail" src="img/logo.png" />
+                        <span class="text-content"><span>Furmata A Cappella Rebranding</span></span>
+                    </a>
+                </li>
+                    <li>
+                    <a>
+                        <img data-toggle="modal" data-target="#DawgCoffeePopup" class="thumbnail" src="img/dawgcoffeesquare.jpg" />
+                        <span class="text-content"><span>Dawg Coffee: a project to practice CSS3</span></span>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <img data-toggle="modal" data-target="#PostersPopup" class="thumbnail" src="img/ANWACsquare.jpg" />
+                        <span class="text-content"><span>Adobe Illustrator Posters</span></span>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <img data-toggle="modal" data-target="#InfographicPopup" class="thumbnail" src="img/finalsquare.png" />
+                        <span class="text-content"><span>Information Visualization; An Infographic on Chocolate</span></span>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <img data-toggle="modal" data-target="#ShootingsPopup" class="thumbnail" src="img/shootingssquare.jpg" />
+                        <span class="text-content"><span>LeafletJS Practice</span></span>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <img data-toggle="modal" data-target="#SpotifyPopup" class="thumbnail" src="img/spotifysquare.jpg" />
+                        <span class="text-content"><span>Spotify API</span></span>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <img data-toggle="modal" data-target="#OpenHousePopup" class="thumbnail" src="img/openhouse.png" />
+                        <span class="text-content"><span>Interior Design Interface</span></span>
+                    </a>
+                </li>
+            </ul>
 
             <div id="FurmataPopup" class="modal fade" role="dialog">
                 <div class="modal-dialog">
@@ -118,9 +158,24 @@
                 </div>
             </div>
 
+            <div id="OpenHousePopup" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">User Interface Design: Open House</h4>
+                        </div>
+                        <div class="modal-body">
+                            <p>Whoot</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-        </div>
-        <div class="col-md-2">
-        </div>
-    </div>
-</div>
+        <!--</div>-->
+        <!--<div class="col-md-2">-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
