--- a/templates/resume.html
+++ b/templates/resume.html
@@ -5,14 +5,21 @@
         <div id="resume" class="col-md-8">
             <h1>Resume</h1>
             <h2>About</h2>
-                <p>I'm a cool person</p>
+                <p>I'm a junior studying at the University of Washington, interested in opportunities in UX. I value
+                 creativity and collaboration.</p>
             <h2>Education</h2>
                 <h4>University of Washington, Seattle WA</h4>
-                <h5>Bachelor of Science in Informatics</h5>
-                <p>Cumulative GPA: 3.75</p>
-                <p>Expected graduation date: June 2017</p>
+                <h4>Bachelor of Science in Informatics</h4>
+                <h5><strong>Cumulative GPA:</strong> 3.75</h5>
+                <h5><strong>Expected graduation date:</strong> June 2017</h5>
                 <p>Click to learn more. Course descriptions are from the University of Washington's course catalogue.</p>
 
+            <div id="courses" class="container-fluid">
+                <div class="row">
+                    <div class="col-md-1">
+                    </div>
+
+                    <div class="col-md-7">
                 <a tabindex="0" class="btn btn-default" role="button" data-toggle="popover" data-trigger="focus"
                          data-placement="top" data-html="true" title="<strong>Foundations of
                         Information</strong>" data-content="<em>Grade received: 3.9</em><p>Information as an object of
@@ -23,31 +30,31 @@
                          principles.</p>">INFO 200
                 </a>
 
-                <button type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                <a type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Computer Programming I
                         </strong>" data-content="<em>Grade received: 3.3</em><p>Basic programming-in-the-small abilities
                          and concepts including procedural programming (methods, parameters, return, values), basic
                          control structures (sequence, if/else, for loop, while loop), file processing, arrays, and an
                          introduction to defining objects. Intended for students without prior programming
                          experience.</p>">CSE 142
-                </button>
+                </a>
 
-                <button type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                <a type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Computer Programming
                          II" data-content="<em>Grade received: 3.0</em><p>Continuation of CSE 142. Concepts of data
                          abstraction and encapsulation including stacks, queues, linked lists, binary trees, recursion,
                           instruction to complexity and use of predefined collection classes.</p>">CSE 143
-                </button>
+                </a>
 
-                <button type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                <a type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Web Programming
                         </strong>" data-content="<em>Grade received: 3.2</em><p>Covers languages, tools, and techniques
                          for developing interactive and dynamic web pages. Topics include page styling, design, and
                          layout; client and server side scripting; web security; and interacting with data sources such
                           as databases. </p>">CSE 154
-                </button>
+                </a>
 
-                <button type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                <a type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Information
                         Visualization and Aesthetics</strong>" data-content="<em>Grade received: 3.9</em><p>Build
                         fluency in expressing information
@@ -56,9 +63,9 @@
                  tools such as Adobe Illustrator and Tableau. Understand the nature of visual potential, design
                  principles, and the impact of color and typography.</p>">
                     INFO 424
-                </button>
+                </a>
 
-                <button type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                <a type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Client-Side Web
                         Development</strong>"
                         data-content="<em>Grade received: 3.7</em><p>Introduction to client-side web development
@@ -66,27 +73,27 @@
                         effective, usable, dynamic, and responsive applications that meet user needs. Includes an
                         introduction to web development roles within organizations, content management systems, and
                         other tools to build and manage websites and applications.</p>">INFO 343
-                </button>
+                </a>
 
-                <button type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                <a type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Introduction to
                         Relational Database Management Systems<strong>" data-content="<em>Grade received: 3.8</em><p>
                         Introduction to relational database management systems, focused on relational theory and the
                         application of conceptual, logical, and physical database modeling. Key topics include the
                         relational model, SQL, entity-relationship modeling, three-tier architectures, implementation
                         of database applications, and related topics in information systems.</p>">INFO 340
-                </button>
+                </a>
 
-                <button type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                <a type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>User Interface Design</strong>"
                         data-content="</em>Grade received: 3.9</em><p>Design oriented to cover fundamentals of user
                         interface design; models on human computer interaction, software psychology, input devices,
                         usability, cognitive and perceptual aspects of human-computer interaction, advanced interface,
                         and research methodologies are discussed</p>">
                     HCDE 455
-                </button>
+                </a>
 
-                <button type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                <a type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Design Thinking</strong>"
                         data-content="</em>Grade received: TBD</em><p>Introduces design methods for identifying user
                         needs, devising new design concepts, prototyping these concepts, and evaluating their utility
@@ -94,21 +101,25 @@
                         identifying users' needs, understanding users' behaviors, envisioning and prototyping new
                         systems, and evaluating the usability of systems. Emphasis on incorporating people in the
                         design process from initial field observations to summative usability testing.</p>">INFO 360
-                </button>
+                </a>
 
-                <button type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                <a type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Information Systems Analysis and
                         Design</strong>" data-content="</em>Grade received: TBD</em><p>Prepares students to participate
                         in structured systems analysis and design efforts. Students learn how to analyze system context,
                          behavior, and structure; identify stakeholders; gather requirements; and redesign systems to
                          make them more beneficial to the organization.</p>">INFO 380
-                </button>
+                </a>
 
-                <button type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                <a type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Mobile App Design</strong>"
                         data-content="</em>Grade received: TBD</em><p></p>">INFO 498A
-                </button>
-
+                </a>
+                </div>
+                    <div class="col-md-4">
+                        </div>
+                    </div>
+                </div>
 
 
             <h2>Languages & Technologies</h2>
@@ -136,7 +147,7 @@
                 </div>
             <h2>Experience</h2>
                 <h3>Communications Director</h3>
-                <p>Furmata a Cappella @ University of Washington: September 2014-Present</p>
+                <h5>Furmata a Cappella @ University of Washington: September 2014-Present</h5>
                 <ul>
                     <li>Manage and regularly post on social media websites (Facebook, YouTube, Instagram, etc.)</li>
                     <li>Coordinate recruitment and auditions</li>
@@ -145,7 +156,7 @@
                     <li>Manage design of Furmata website</li>
                 </ul>
                 <h3>Student Caller Trainer</h3>
-                <p>Office of Annual Giving @ University of Washington: January 2015-December 2015</p>
+                <h5>Office of Annual Giving @ University of Washington: January 2015-December 2015</h5>
                 <ul>
                     <li>Train new callers on office policies and use of Campus Call</li>
                     <li>Attend Veteran Student Caller Committee meetings</li>
@@ -154,7 +165,7 @@
                     <li>Excellent phone etiquette and communication skills</li>
                 </ul>
                 <h3>FIG Leader</h3>
-                <p>University of Washington: Fall 2015</p>
+                <h5>University of Washington: Fall 2015</h5>
                 <ul>
                     <li>Lead and facilitate weekly classes for Freshman Interest Group </li>
                     <li>Create and implement lesson plans</li>
@@ -163,13 +174,11 @@
                     <li>Teach/advise freshman both in class and in person to help them transition into college</li>
                 </ul>
             <h2>Awards and Honors</h2>
-                <h3>Dean's List</h3>
-                <p>University of Washington</p>
+                <h4><strong>Dean's List</strong> - University of Washington</h4>
                 <p>7 quarters out of 7</p>
-                <h3>Caller of the Quarter</h3>
-                <p>Office of Annual Giving @ University of Washington</p>
+                <h4><strong>Caller of the Quarter</strong> - Office of Annual Giving @ University of Washington</h4>
                 <p>Highest statistical perforamnce Fall 2014 in total money, total pledges, and total talk time.</p>
-                <h3>Scholarships</h3>
+                <h4><strong>Scholarships</strong></h4>
                 <ul>
                     <li>Wells Fargo Team Members' Dependent Children Scholarship (Fall 2013-Winter 2015)</li>
                     <li>Student Calling Program (Winter 2015)</li>
