--- a/css/app.css
+++ b/css/app.css
@@ -22,6 +22,7 @@ nav {
     padding-left: 15px;
     position: fixed;
     width: 100%;
+    z-index: 1;
 }
 
 ol {
@@ -85,11 +86,78 @@ a:hover, a:active, a:link {
 
 .thumbnail {
     padding: 0;
-    margin: 1em;
     height: 300px;
     display: inline;
 }
 
+#courses a {
+    margin: 1em;
+}
+
+img.opacity {
+    opacity: 0.5;
+    filter: alpha(opacity=50);
+    -webkit-transition: opacity 1s linear;
+}
+
+img.opacity:hover {
+    opacity: 1;
+    filter: alpha(opacity=100);
+    -webkit-transition: opacity 1s linear;
+}
+
+/*.brightness {*/
+    /*background-color: black;*/
+    /*display: inline-block;*/
+/*}*/
+
+/*.brightness img:hover {*/
+    /*opacity: .5;*/
+/*}*/
+
+ul.img-list {
+    list-style-type: none;
+    margin: 1em;
+    padding: 0;
+    /*text-align: center;*/
+}
+
+ul.img-list li {
+    display: inline-block;
+    height: 300px;
+    margin-right: 15%;
+    margin-bottom: 5%;
+    position: relative;
+    width: 150px;
+}
+
+ul.img-list li:hover span.text-content {
+    opacity: 1;
+}
+
+span.text-content {
+    background: rgba(0,0,0,0.5);
+    color: white;
+    cursor: pointer;
+    display: table;
+    height: 300px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 300px;
+    opacity: 0;
+    -webkit-transition: opacity 500ms;
+    -moz-transition: opacity 500ms;
+    -o-transition: opacity 500ms;
+    transition: opacity 500ms;
+}
+
+span.text-content span {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+    font-size: x-large;
+}
 
 @media screen and (min-width: 768px) {
     ol {
