--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,1 +1,15 @@
-<p>call me beep me if you wanna reach me</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-2">
+        </div>
+        <div id="contact" class="col-md-8">
+            <h1>Kaitlin Lockhart</h1>
+            <h3><strong>Phone:</strong> (360) 513-6896</h3>
+            <h3><strong>E-mail:</strong> kaitlin.lockhart@gmail.com</h3>
+            <h3><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/kaitlinlockhart"> linkedin.com/in/kaitlinlockhart</a></h3>
+            <h3><strong>GitHub:</strong> <a href="https://github.com/kailock"> github.com/kailock</a></h3>
+        </div>
+        <div class="col-md-2">
+        </div>
+    </div>
+</div>
