--- a/templates/resume.html
+++ b/templates/resume.html
@@ -3,10 +3,10 @@
         <div class="col-md-2">
         </div>
         <div id="resume" class="col-md-8">
-            <h1>Resume</h1>
-            <h2>About</h2>
-                <p>I'm a junior studying at the University of Washington, interested in opportunities in UX. I value
-                 creativity and collaboration.</p>
+            <!--<h1>Resume</h1>-->
+            <!--<h2>About</h2>-->
+                <!--<p>I'm a junior studying at the University of Washington, interested in opportunities in UX. I value-->
+                 <!--creativity and collaboration.</p>-->
             <h2>Education</h2>
                 <h4>University of Washington, Seattle WA</h4>
                 <h4>Bachelor of Science in Informatics</h4>
