--- a/css/app.css
+++ b/css/app.css
@@ -38,6 +38,10 @@ nav li  {
 }
 
 a {
+    color: lightpink;
+}
+
+nav a {
     color: white;
 }
 
@@ -46,7 +50,7 @@ a:hover, a:active, a:link {
     text-decoration: none;
 }
 
-#resume {
+#resume, #contact {
     background: rgba(255,255,255,0.7);
     filter: alpha(opacity=70); /*for IE8 and earlier*/
     border-radius: 25px;
@@ -105,15 +109,6 @@ img.opacity:hover {
     filter: alpha(opacity=100);
     -webkit-transition: opacity 1s linear;
 }
-
-/*.brightness {*/
-    /*background-color: black;*/
-    /*display: inline-block;*/
-/*}*/
-
-/*.brightness img:hover {*/
-    /*opacity: .5;*/
-/*}*/
 
 ul.img-list {
     list-style-type: none;
