--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,18 @@
-<h1>Hi, I'm Kaitlin</h1>
-<p id="about-content">I'm an Informatics student at the University of Washington in Seattle, WA.
-I have a strong interest in UX and UI design. I love my major and am excited to enter an industry
-    that is constantly innovating: I hope to be a part of positive, social change.
-    I'm also slowly working on becoming a better programmer everyday: I think front-end web
-    development is fun.</p>
-<p>My other interests include singing, group exercise, and being a closet nerd.</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-2">
+        </div>
+        <div id="aboutbox" class="col-md-8">
+            <img src="img/profile.jpg" />
+            <h1>Hi, I'm Kaitlin</h1>
+            <p id="about-content">I'm an Informatics student at the University of Washington in Seattle, WA.
+            I have a strong interest in UX and UI design. I love my major and am excited to enter an industry
+                that is constantly innovating: I hope to be part of projects that make a positive, social change.
+                I'm also slowly working on becoming a better programmer everyday: I think front-end web
+                development is fun.</p>
+            <p>My other interests include singing, group exercise, and being a closet nerd.</p>
+        </div>
+        <div class="col-md-2">
+        </div>
+    </div>
+</div>
