--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -105,8 +105,8 @@
                 <p>As Communication's Director for my a cappella group, creating posters and Facebook banners for our concerts
                 is one of my main duties. Here are some of the posters I created within the last year using Adobe Illustrator.</p>
                 <img height="70%" src="img/ANWAC.jpg"/>
-                <img height="70%" src="img/auditions.jpg"/>
                 <img height="70%" src="img/doremefallshow-01.jpg"/>
+                <img height="70%" src="img/auditions.jpg"/>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -215,12 +215,36 @@
                 <p>Here are two of the eleven scenes we drew.</p>
                 <img width="220px"src="img/2.jpg" />
                 <img width="220px" src="img/10.jpg" />
-                
+
                 <p><strong>Phase 4: Task Analysis</strong></p>
-                <p><strong>Phase 5: Flipbook Field Test Report</strong></p>
+                <p>For this phase, we identified the user flow for three tasks we planned on including in our interface.
+                We created a system map for the interface and made flow charts for each task. This is one of those
+                flowcharts, created with Lucidchart.</p>
+                <img width="570px" src="img/oh-flowchart.png" />
+
+                <p><strong>Phase 5: Flipbook Field Test Report</strong> AKA Paper Prototype</p>
+                <p>This was our first prototype, constructed with cardstock.</p>
+                <img width="570px" src="img/prototype2.jpg" />
+                <img width="570px" src="img/prototype3.jpg" />
+
                 <p><strong>Phase 6: Mockups</strong></p>
+                <p>For this phase, one of our team members coded our design into a mobile app prototype.
+                Open House features Augmented Reality to let the user view 3D models of furniture through their iPhone
+                camera. We included a social aspect too, letting users share their designs and follow others for
+                inspiration; we incoporated this because our user interviews reported value in others' opinions for
+                interior design.</p>
+                <iframe width="438" height="930" src="//invis.io/4J5SS3JMF" frameborder="0" allowfullscreen></iframe>
+
                 <p><strong>Phase 7: Prototype Field Test Report</strong></p>
+                <p>We ran some user tests with our mockup and made changes to our design based on the results.
+                Originally we included both virtual realitiy and augmented reality to our design, but our user
+                tests showed that the average user had trouble differentiating how to get to one or the other on
+                our app. Also, the augmented reality feature seemed a lot more popular so we decided to narrow our
+                scope and focus on AR more. We also changes button and icon designs to be more clear.</p>
+
                 <p><strong>Phase 8: Final Report</strong></p>
+                <p>Our final deliverable was a team report documenting the entire process.</p>
+
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -238,7 +262,7 @@
             <div class="modal-body">
                 <p>This was my final project for Client-Side Web Development (INFO 343). It was my first time
                     working with a group on one coding project and it was also my first time working with a client.</p>
-                <img height="250px" src="img/gamer1.png" />
+                <img width="570px" src="img/gamer1.png" />
                 <p>Our client, GAMER Group, is a research group here at UW. Their big project is to create a catalogue
                 to document video games. Their intention is to be the go-to source for video game information, like how
                 IMDb is the most reputable source for movie information.</p>
@@ -246,8 +270,8 @@
                 created this website with a large, multi-page form to submit into the database.</p>
                 <img width="570px" src="img/gamer3.png" />
                 <p>Users could see the video games they submitted in the past and edit their user information as well.</p>
-                <img height="250px" src="img/gamer2.png" />
-                <img height="250px" src="img/gamer2.5.png" />
+                <img width="570px" src="img/gamer2.png" />
+                <img width="570px" src="img/gamer2.5.png" />
                 <p>I did the bulk of the CSS3 styling and created the multi-page architecture. This project was one of the
                 most challenging I ever worked on, because I had never coded with other people before and had never used
                 GitHub in that way either. Working with a client showed me how important it is to have good commmunication
