--- a/templates/resume.html
+++ b/templates/resume.html
@@ -16,10 +16,10 @@
 
             <div id="courses" class="container-fluid">
                 <div class="row">
-                    <div class="col-md-1">
+                    <div class="col-lg-1">
                     </div>
 
-                    <div class="col-md-7">
+                    <div class="col-lg-7">
                 <a tabindex="0" class="btn btn-default" role="button" data-toggle="popover" data-trigger="focus"
                          data-placement="top" data-html="true" title="<strong>Foundations of
                         Information</strong>" data-content="<em>Grade received: 3.9</em><p>Information as an object of
@@ -116,7 +116,7 @@
                         data-content="</em>Grade received: TBD</em><p></p>">INFO 498A
                 </a>
                 </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4">
                         </div>
                     </div>
                 </div>
@@ -124,7 +124,7 @@
 
             <h2>Languages & Technologies</h2>
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-xs-6">
                         <ul>
                             <li>CSS3</li>
                             <li>HTML5</li>
@@ -135,7 +135,7 @@
                             <li>SQL</li>
                         </ul>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-xs-6">
                         <ul>
                             <li>Adobe Illustrator</li>
                             <li>Tableau</li>
@@ -183,7 +183,6 @@
                     <li>Wells Fargo Team Members' Dependent Children Scholarship (Fall 2013-Winter 2015)</li>
                     <li>Student Calling Program (Winter 2015)</li>
                 </ul>
-            <h3>Downloadable PDF:</h3>
         </div>
         <div class="col-md-2">
         </div>
