--- a/templates/resume.html
+++ b/templates/resume.html
@@ -8,11 +8,13 @@
                 <!--<p>I'm a junior studying at the University of Washington, interested in opportunities in UX. I value-->
                  <!--creativity and collaboration.</p>-->
             <h2>Education</h2>
+                <div id="edu">
                 <h4>University of Washington, Seattle WA</h4>
                 <h4>Bachelor of Science in Informatics</h4>
                 <h5><strong>Cumulative GPA:</strong> 3.75</h5>
                 <h5><strong>Expected graduation date:</strong> June 2017</h5>
                 <p>Click to learn more. Course descriptions are from the University of Washington's course catalogue.</p>
+                    </div>
 
             <div id="courses" class="container-fluid">
                 <div class="row">
@@ -20,7 +22,7 @@
                     </div>
 
                     <div class="col-lg-7">
-                <a tabindex="0" class="btn btn-default" role="button" data-toggle="popover" data-trigger="focus"
+                <a href="#" tabindex="0" class="btn btn-default" role="button" data-toggle="popover" data-trigger="focus"
                          data-placement="top" data-html="true" title="<strong>Foundations of
                         Information</strong>" data-content="<em>Grade received: 3.9</em><p>Information as an object of
                         study, including theories, concepts, and principles of information, information seeking,
@@ -30,7 +32,7 @@
                          principles.</p>">INFO 200
                 </a>
 
-                <a type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Computer Programming I
                         </strong>" data-content="<em>Grade received: 3.3</em><p>Basic programming-in-the-small abilities
                          and concepts including procedural programming (methods, parameters, return, values), basic
@@ -39,14 +41,14 @@
                          experience.</p>">CSE 142
                 </a>
 
-                <a type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Computer Programming
                          II" data-content="<em>Grade received: 3.0</em><p>Continuation of CSE 142. Concepts of data
                          abstraction and encapsulation including stacks, queues, linked lists, binary trees, recursion,
                           instruction to complexity and use of predefined collection classes.</p>">CSE 143
                 </a>
 
-                <a type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Web Programming
                         </strong>" data-content="<em>Grade received: 3.2</em><p>Covers languages, tools, and techniques
                          for developing interactive and dynamic web pages. Topics include page styling, design, and
@@ -54,7 +56,7 @@
                           as databases. </p>">CSE 154
                 </a>
 
-                <a type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Information
                         Visualization and Aesthetics</strong>" data-content="<em>Grade received: 3.9</em><p>Build
                         fluency in expressing information
@@ -65,7 +67,7 @@
                     INFO 424
                 </a>
 
-                <a type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Client-Side Web
                         Development</strong>"
                         data-content="<em>Grade received: 3.7</em><p>Introduction to client-side web development
@@ -75,7 +77,7 @@
                         other tools to build and manage websites and applications.</p>">INFO 343
                 </a>
 
-                <a type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Introduction to
                         Relational Database Management Systems<strong>" data-content="<em>Grade received: 3.8</em><p>
                         Introduction to relational database management systems, focused on relational theory and the
@@ -84,7 +86,7 @@
                         of database applications, and related topics in information systems.</p>">INFO 340
                 </a>
 
-                <a type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>User Interface Design</strong>"
                         data-content="</em>Grade received: 3.9</em><p>Design oriented to cover fundamentals of user
                         interface design; models on human computer interaction, software psychology, input devices,
@@ -93,7 +95,7 @@
                     HCDE 455
                 </a>
 
-                <a type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Design Thinking</strong>"
                         data-content="</em>Grade received: TBD</em><p>Introduces design methods for identifying user
                         needs, devising new design concepts, prototyping these concepts, and evaluating their utility
@@ -103,7 +105,7 @@
                         design process from initial field observations to summative usability testing.</p>">INFO 360
                 </a>
 
-                <a type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Information Systems Analysis and
                         Design</strong>" data-content="</em>Grade received: TBD</em><p>Prepares students to participate
                         in structured systems analysis and design efforts. Students learn how to analyze system context,
@@ -111,7 +113,7 @@
                          make them more beneficial to the organization.</p>">INFO 380
                 </a>
 
-                <a type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Mobile App Design</strong>"
                         data-content="</em>Grade received: TBD</em><p></p>">INFO 498A
                 </a>
