--- a/templates/resume.html
+++ b/templates/resume.html
@@ -9,13 +9,13 @@
                  <!--creativity and collaboration.</p>-->
             <h2>Education</h2>
                 <div id="edu">
-                <h4>University of Washington, Seattle WA</h4>
-                <h4>Bachelor of Science in Informatics</h4>
-                <h5><strong>Cumulative GPA:</strong> 3.75</h5>
-                <h5><strong>Expected graduation date:</strong> June 2017</h5>
-                <p>Click to learn more. Course descriptions are from the University of Washington's course catalogue.</p>
-                    </div>
-
+                    <p>University of Washington, Seattle WA</p>
+                    <p>Bachelor of Science in Informatics</p>
+                    <p>Cumulative GPA: 3.75</p>
+                    <p>Expected graduation date: June 2017</p>
+                </div>
+            <br>
+            <p>Click to learn more. Course descriptions are from the University of Washington's course catalogue.</p>
             <div id="courses" class="container-fluid">
                 <div class="row">
                     <div class="col-lg-1">
