--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -85,7 +85,9 @@
             </div>
             <div class="modal-body">
                 <p>This was one of my first assignments in INFO 343: it was an exercise that was mainly
-                    for CSS3 practice. It also helped me practice using GitHub.</p>
+                    for CSS3 practice. We were taught to code using a "mobile first" approach. This assignment also
+                    helped me practice using GitHub.</p>
+                <p>Click the thumbnail to see the website. Once there, try resizing the screen to see it adjust.</p>
                 <a href="http://students.washington.edu/kailock/info343/dawg-coffee/"><img height="250px" src="img/dawgcoffee.jpg"/></a>
             </div>
             <div class="modal-footer">
@@ -122,12 +124,16 @@
                 <h4 class="modal-title">Chocolate Infographic</h4>
             </div>
             <div class="modal-body">
-                <p><a href="http://kailock.wix.com/infovis-2015">Click here</a> to see the
-                    website for my infographic.</p>
                 <p>This project was for my Information Visualization class (INFO 424). We were given the freedom to pick any
                 topic we wanted, and I picked chocolate. Throughout the quarter we learned the best ways to display numeric,
-                geographic, time, appearance, and relationship information. By the end we put together our own infographic.</p>
+                geographic, time, appearance, and relationship information. The tools we used wereIllustrator, Tableau,
+                    and Excel.</p>
+                <p><a href="http://kailock.wix.com/infovis-2015">Click here</a> to see the
+                    website for my infographic. Here are some of my individual displays.</p>
                 <img width="570px" src="img/number.png" />
+                <img width="570px" src="img/map.png" />
+                <img width="570px" src="img/number2.png" />
+                <img width="570px" src="img/relationship.png" />
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -144,9 +150,8 @@
             </div>
             <div class="modal-body">
                 <p>This INFO 343 assignment was the first time I used a JavaScript library: for this
-                    site, I used Leaflet.js . Using Leaflet and crowdsourced data on police shootings during the
-                last year, I was able to map out where these shootings had occurred and whether or not the victim
-                was killed.</p>
+                    site, I used Leaflet.js . Using Leaflet and crowdsourced data on police shootings, I was able to map
+                    out where these shootings had occurred in 2015 and whether or not the victim was killed.</p>
                 <p>Click the thumbnail to see the website.</p>
                 <a href="http://students.washington.edu/kailock/info343/police-shooting/"><img height="250px" src="img/shootings.jpg"/></a>
             </div>
@@ -185,8 +190,8 @@
             <div class="modal-body">
                 <p>For my Human Interface Design class (HCDE 455) I worked with 3 other students to design an interface
                 that's goal was to make interior design easier. The class walked us through different phases, each with
-                its own deliverable, and ended with a complete, functional prototype: a mobile app called Open House.</p>
-                <p><strong>Phase 1: Prospectus</strong> Prepared a four page document outline our project.
+                its own deliverable. By week 10, we had a complete, functional prototype: a mobile app called Open House.</p>
+                <p><strong>Phase 1 - Prospectus:</strong> Prepared a four page document outlining our project.
                     <ul>
                         <li>Team Identity: Name and motto</li>
                         <li>Product functionality: What is it supposed to do? What problem does it solve?</li>
@@ -197,52 +202,57 @@
                         <li>Project Organization/Schedule</li>
                 </ul></p>
 
-                <p><strong>Phase 2: Project Characterization</strong> In this phase, we conducted user research to better
-                understand the problem. We also did some scholarly research on 3D interaction techniques and Virtual Reality.</p>
+                <p><strong>Phase 2 - Project Characterization:</strong> In this phase, we conducted user research to
+                understand the problem better. We also did some scholarly research on 3D interaction techniques and Virtual Reality.</p>
                 <p>Each team member interviewed someone. I interviewed my cousin for this phase, who received a degree in
                     interior design. Our results revealed that one of the greatest challenges about interior design was
                 finding inexpensive, quality furniture and being able to envision furniture (both online and in store) within
                 your actual space. Our team wanted to focus on the latter issue: creating an interface that could assist
                 the user in envisioning furniture in their space without the furniture physically being there.</p>
 
-                <p><strong>Phase 3A: Persona</strong></p>
+                <p><strong>Phase 3A - Persona:</strong></p>
                 <img width="570px" src="img/oh-persona.png" />
 
-                <p><strong>Phase 3B: Storyboards</strong> We sketched up a storyboard with our persona, Christian. The story
+                <p><strong>Phase 3B - Storyboards:</strong> We sketched up a storyboard with our persona, Christian. The story
                 was that he wanted to incorporate a sand castle as an accent piece in his living room but his wife wasn't having
                 it. He used Open House to digitally redecorate his living room to have a beach theme and used it to persuade
                 his wife to redecorate their living room in real life. </p>
+                <p>In retrospect, we probably should have wrote our storyboard to solve the main problem Open House was meant
+                to solve: seeing furniture in your home without it being there. The problem presented in the story was one our
+                team wanted to include in the web version of Open House. In the end we only created the mobile version.</p>
                 <p>Here are two of the eleven scenes we drew.</p>
-                <img width="220px"src="img/2.jpg" />
-                <img width="220px" src="img/10.jpg" />
+                <img width="230px"src="img/2.jpg" />
+                <img width="230px" src="img/10.jpg" />
 
-                <p><strong>Phase 4: Task Analysis</strong></p>
-                <p>For this phase, we identified the user flow for three tasks we planned on including in our interface.
+                <p><strong>Phase 4 - Task Analysis:</strong></p>
+                <p>For this phase, we identified the user flow for three tasks in our interface.
                 We created a system map for the interface and made flow charts for each task. This is one of those
-                flowcharts, created with Lucidchart.</p>
+                flowcharts, which I created with Lucidchart.</p>
                 <img width="570px" src="img/oh-flowchart.png" />
 
-                <p><strong>Phase 5: Flipbook Field Test Report</strong> AKA Paper Prototype</p>
-                <p>This was our first prototype, constructed with cardstock.</p>
+                <p><strong>Phase 5 - Flipbook Field Test Report:</strong> AKA Paper Prototype</p>
+                <p>Here's a couple pictures of some screens from our first prototype, constructed with cardstock.</p>
                 <img width="570px" src="img/prototype2.jpg" />
                 <img width="570px" src="img/prototype3.jpg" />
 
-                <p><strong>Phase 6: Mockups</strong></p>
+                <p><strong>Phase 6 - Mockups:</strong></p>
                 <p>For this phase, one of our team members coded our design into a mobile app prototype.
                 Open House features Augmented Reality to let the user view 3D models of furniture through their iPhone
                 camera. We included a social aspect too, letting users share their designs and follow others for
                 inspiration; we incoporated this because our user interviews reported value in others' opinions for
                 interior design.</p>
-                <iframe width="438" height="930" src="//invis.io/4J5SS3JMF" frameborder="0" allowfullscreen></iframe>
+                <iframe width="570" height="930" src="//invis.io/4J5SS3JMF" frameborder="0" allowfullscreen></iframe>
 
-                <p><strong>Phase 7: Prototype Field Test Report</strong></p>
+                <p><strong>Phase 7 - Prototype Field Test Report:</strong></p>
                 <p>We ran some user tests with our mockup and made changes to our design based on the results.
                 Originally we included both virtual realitiy and augmented reality to our design, but our user
                 tests showed that the average user had trouble differentiating how to get to one or the other on
                 our app. Also, the augmented reality feature seemed a lot more popular so we decided to narrow our
                 scope and focus on AR more. We also changes button and icon designs to be more clear.</p>
+                <p>Looking back, I feel like including the social media functionality to Open House made our scope
+                too large. Even if we had to learn the hard way, now we know better for future projects! </p>
 
-                <p><strong>Phase 8: Final Report</strong></p>
+                <p><strong>Phase 8 - Final Report:</strong></p>
                 <p>Our final deliverable was a team report documenting the entire process.</p>
 
             </div>
@@ -263,19 +273,19 @@
                 <p>This was my final project for Client-Side Web Development (INFO 343). It was my first time
                     working with a group on one coding project and it was also my first time working with a client.</p>
                 <img width="570px" src="img/gamer1.png" />
-                <p>Our client, GAMER Group, is a research group here at UW. Their big project is to create a catalogue
+                <p>Our client, GAMER Group, is a research group here at the University of Washington. Their current project is to create a catalogue
                 to document video games. Their intention is to be the go-to source for video game information, like how
                 IMDb is the most reputable source for movie information.</p>
-                <p>They needed a website that could be used for gaming companies to document their video games. So we
+                <p>They needed a website that could be used for select people/organizations to document video games. So we
                 created this website with a large, multi-page form to submit into the database.</p>
                 <img width="570px" src="img/gamer3.png" />
-                <p>Users could see the video games they submitted in the past and edit their user information as well.</p>
+                <p>Users can see the video games they submitted in the past and edit their user information as well.</p>
                 <img width="570px" src="img/gamer2.png" />
                 <img width="570px" src="img/gamer2.5.png" />
-                <p>I did the bulk of the CSS3 styling and created the multi-page architecture. This project was one of the
-                most challenging I ever worked on, because I had never coded with other people before and had never used
-                GitHub in that way either. Working with a client showed me how important it is to have good commmunication
-                is on a project like this. It was a rewarding experience.</p>
+                <p>I did the bulk of the CSS3 styling and helped set up the multi-page architecture. This project was one of the
+                most challenging I'd worked on, because I had never coded with other people before and had never used
+                GitHub collaboratively either. Working with a client showed me how important it is to have good commmunication
+                on a project like this. Despite the many obstacles we faced, it was a rewarding experience.</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
