--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -232,8 +232,8 @@
 
                 <p><strong>Phase 5 - Flipbook Field Test Report:</strong> AKA Paper Prototype</p>
                 <p>Here's a couple pictures of some screens from our first prototype, constructed with cardstock.</p>
-                <img width="570px" src="img/prototype2.jpg" />
-                <img width="570px" src="img/prototype3.jpg" />
+                <img width="570px" src="img/prototype2.JPG" />
+                <img width="570px" src="img/prototype3.JPG" />
 
                 <p><strong>Phase 6 - Mockups:</strong></p>
                 <p>For this phase, one of our team members coded our design into a mobile app prototype.
